test/parser/literals/malformed_float_no_digits_in_exponent.myte
module test

fun main() {
  1.2e;
}